removed JDK6 and Scala 2.10 references from the build