@@ -10,7 +10,6 @@ buildscript {
 subprojects {
 
     def scalaVersionLookup = [
-        '2.10': '2.10.5',
         '2.11': '2.11.7'
     ]
 
@@ -45,9 +44,7 @@ subprojects {
                   "org.json4s:json4s-jackson_${project.scalaVersion}:3.2.11"
           testCompile "org.specs2:specs2_${project.scalaVersion}:2.3.13"
 
-          if (project.scalaVersion == '2.11') {
-              compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
-          }
+          compile "org.scala-lang.modules:scala-xml_2.11:1.0.2"
       }
 
       testCompile 'org.hamcrest:hamcrest-all:1.3', 'org.mockito:mockito-core:1.9.5', 'junit:junit:4.12'
@@ -64,7 +61,6 @@ subprojects {
         scalaCompileOptions.additionalParameters = ['-target:jvm-1.8']
         configure(scalaCompileOptions.forkOptions) {
           memoryMaximumSize = '700m'
-          jvmArgs = ['-XX:MaxPermSize=512m']
         }
     }
 
